--- a/timeshift-autosnap.conf
+++ b/timeshift-autosnap.conf
@@ -19,3 +19,7 @@ maxSnapshots=3
 # If grub-btrfs package is not installed grub won't be generated.
 # Default value is true.
 updateGrub=true
+
+# snapshotDescription defines value used to distinguish snapshots created using timeshift-autosnap
+# Default value is "{timeshift-autosnap} {created before upgrade}".
+snapshotDescription={timeshift-autosnap} {created before upgrade}
