Add support to ignoring snapshots on filesystems other than btrfs

--- a/timeshift-autosnap.conf
+++ b/timeshift-autosnap.conf
@@ -6,6 +6,10 @@
 # Default value is false.
 skipAutosnap=false
 
+# skipRsyncAutosnap defines if timeshift-autosnap execution should be skipped on filesystems other than btrfs.
+# Default value is true.
+skipRsyncAutosnap=true
+
 # deleteSnapshots defines if old snapshots should be deleted.
 # Default value is true.
 deleteSnapshots=true
